<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_marginTop="20dp"
        android:text="Entrar"
        android:textColor="@color/white"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginTop="-100dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginTop="-350dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_password"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/signIn"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@id/card2"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/not_register"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <TextView
        android:id="@+id/textViewAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/singUp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2"/>

</androidx.constraintlayout.widget.ConstraintLayout>